k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pro1
  namespace: suresh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pro1
  template:
    metadata:
      labels:
        app: pro1
    spec:
      serviceAccountName: custom-ksa
      containers:
      - name: app
        image: us-central1-docker.pkg.dev/gcp-env-dev/image-repo/pro-1:latest
        ports:
        - containerPort: 3000
