k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pro1-service
  namespace: suresh
spec:
  selector:
    app: pro1  # Adjust to match your pod label
  ports:
    - protocol: TCP
      port: 80      # Port your app is running on inside the pod
      targetPort: 8080  # Port your app is running on inside the pod (adjust accordingly)
  type: LoadBalancer
