k8s/ingress-simployee.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simployee-ingress
  namespace: suresh
  annotations:
    kubernetes.io/ingress.class: "gce"    # or "nginx" if you run nginx-ingress
spec:
  tls:
  - hosts:
    - www.simployee.com
    secretName: simployee-tls

  rules:
  - host: www.simployee.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pro1-service    # your LoadBalancer service name
            port:
              number: 80
